--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+
+rust-bert = "0.23.0"
+anyhow = "1.0"
+
+indicatif = "=0.16.2"
+console = "=0.16.1"
